[project]
name = "comfyui-prompt-control-legacy"
description = "Legacy prompt control nodes. These exist only to allow old workflows to run"
version = "1.2.2"
license = { file = "LICENSE" }
dependencies = ["lark >= 1.1.9"]

[project.urls]
Repository = "https://github.com/asagi4/comfyui-prompt-control-legacy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "asagi4"
DisplayName = "ComfyUI Prompt Control (UNMAINTAINED LEGACY VERSION)"
Icon = ""
